# mlrun

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPRECATION.md  Makefile  README.md  conda-arm64-requirements-python39.txt  dependencies.py  dev-requirements.txt  extras-requirements.txt  packages.py  pyproject.toml  requirements.txt  setup.py
.claude/commands/: debug-system-test.md  system-test.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: installation_issue.yaml
.github/scripts/: github-app-token.sh
.github/workflows/: build-internal.yaml  build-workflow-matrix.json  build.yaml  ci.yaml  docs-build.yaml  docs-language-linter.yaml  go-ci.yaml  labeler.yaml  periodic-rebuild.yaml  post-coverage-comment.yaml  private-release.yaml  release-pipeline-adapters.yaml  release-promotion.yaml  release.yaml  security_scan.yaml  set-smoke-label-unknown.yml  smoke-tests.yml  system-tests-enterprise.yml  system-tests-opensource.yml  upgrade-lock.yaml
automation/: requirements.txt
automation/deployment/: ce.py  deployer.py  setup_local_ce.py
automation/package_test/: test.py
automation/patch_igz/: README.md  patch_env_template.yml  patch_remote.py
automation/release_notes/: generate.py
automation/scripts/: _mysql_docker_lib.sh  add-remove-labels.js  bundle_demos.py  copyright_year.sh  create_migration_mysql.sh  demos_config.json  get_demos.py  squash_migrations.py  squash_migrations_mysql.sh  update_demos.sh
automation/system_test/: k3s_docker_registry.yaml  prepare.py  system-tests-branches-list.txt
automation/version/: version_file.py
dockerfiles/: README.md  constraints-py3.11.txt  constraints-py3.9.txt
dockerfiles/base/: locked-requirements.txt
dockerfiles/common/: Dockerfile
dockerfiles/gpu/: Dockerfile  locked-requirements.txt
dockerfiles/jupyter/: Dockerfile  README.ipynb  align_mlrun.sh  locked-requirements.txt  mlrun.env  requirements.txt
dockerfiles/mlrun/: Dockerfile  locked-requirements.txt  requirements.txt
dockerfiles/mlrun-api/: Dockerfile  locked-requirements.txt  requirements.txt
dockerfiles/mlrun-kfp/: Dockerfile  locked-requirements.txt  requirements.txt
dockerfiles/test/: Dockerfile  locked-requirements.txt  locked-requirements_3.11.txt  locked-requirements_3.9.txt  requirements.txt
dockerfiles/test-system/: Dockerfile  locked-requirements.txt
docs/: architecture.md  cheat-sheet.md  conf.py  contents.rst  ecosystem.md  glossary.md  index.md  install.md  llms.py  requirements.txt  secrets.md  setup-guide.md
docs/change-log/: index.md
docs/concepts/: alerts.md  auto-logging-mlops.md  data.md  local-remote.md  mlrun-execution-context.md  model-monitoring.md  notifications.md  nuclio-real-time-functions.ipynb  runs-workflows.md  submitting-tasks-jobs-to-functions.md  workflow-overview.md
docs/data-prep/: index.md  logging_datasets.md
docs/deployment/: batch_inference.ipynb
docs/development/: index.md  model-training-tracking.md
docs/feature-store/: basic-demo.ipynb  feature-store-available-steps.md  feature-store.md  sources-targets.md  training-serving.md  transformations.md
docs/genai/: genai-flow.md
docs/install/: aws-install.md  aws_values.yaml.template  cluster.yaml.template  kubernetes.md  remote.md
docs/install-mlrun-ce/: aws-install.md  index.md  installation.md  kubernetes-install.md  mlrun-ce-development-notes.md  mlrun-ce-installation-notes.md  storing-artifact-in-aws-s3-storage.md
docs/model-monitoring/: applications.md  index.md  running-applications.md  view-mm-applications.md
docs/projects/: ci-integration.md  git-best-practices.ipynb  load-project-yaml.ipynb  project-setup.md  run-build-deploy.md
docs/runtimes/: application.ipynb  configuring-job-resources.md  create-and-use-functions.ipynb  dask-mlrun.ipynb  dask-pipeline.ipynb  function-storage.md  functions.md  git-repo-as-hub.ipynb  horovod.ipynb  images.md  job-function.md  load-from-hub.md  mlrun_code_annotations.ipynb  multiple-funcs-exithandler.ipynb  multiple-parallel-workflow.ipynb  serving-function.md
docs/server-cfg/: server-metrics.md
docs/serving/: api-handler.md  available-steps.md  basic-example.ipynb  basic-steps.ipynb  branch-merge.md  building-graphs.md  concurrent-processing.ipynb  custom-model-serving-class.md  deploying-graphs.ipynb  distributed-graph-oview.md  distributed-graph.ipynb  getting-started.ipynb  getting-started.md  graph-advanced-cfg.md  graph-example.ipynb  graph-ha-cfg.md  hub-steps.ipynb  model-serving-get-started.md  model-serving-steps.md  pipelines-error-handling.md  remote-execution.ipynb  remote-steps.ipynb  remote-steps.md  router-steps.md  router.md  serving-graph.md  test-deploy-model-server.md  use-cases.md  writing-custom-steps.ipynb
docs/store/: artifacts.md  code-artifacts.md  (+5 more)
examples/: mlrun_export_import.ipynb  mlrun_jobs.ipynb  training.py
mlrun/: __init__.py  __main__.py  client.py  config.py  errors.py  execution.py  features.py  k8s_utils.py  lists.py  model.py  render.py  run.py  runtime_configuration_context.py  secrets.py
pipeline-adapters/: Makefile
pipeline-adapters/mlrun-pipelines-kfp-common/: pyproject.toml  setup.py
pipeline-adapters/mlrun-pipelines-kfp-common/src/mlrun_pipelines/common/: client.py  imports.py  models.py  ops.py
pipeline-adapters/mlrun-pipelines-kfp-v1-8/: pyproject.toml  setup.py
pipeline-adapters/mlrun-pipelines-kfp-v1-8/src/mlrun_pipelines/: client.py  helpers.py  imports.py  mixins.py  models.py  ops.py  patcher.py  utils.py
pipeline-adapters/mlrun-pipelines-kfp-v1-8/tests/: test_experiment_pagination.py  test_list_runs.py  test_utils.py
pipeline-adapters/mlrun-pipelines-kfp-v2/: pyproject.toml  setup.py
pipeline-adapters/mlrun-pipelines-kfp-v2/src/mlrun_pipelines/: client.py  helpers.py  imports.py  ops.py  utils.py
server/: model-runner-step.md
tests/: __init__.py  common_fixtures.py  conftest.py  sitecustomize.py  test_cli.py  test_config.py  test_docker.py  test_errors.py  test_execution.py  test_import_mlrun.py  test_render.py  test_requirements.py  test_runtime_configuration_context.py
(+922 files in other folders)
